--- a/CookHelper/CookHelper.csproj
+++ b/CookHelper/CookHelper.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controls\" />
+  </ItemGroup>
 </Project>
