--- a/CookHelper/CookHelper.csproj
+++ b/CookHelper/CookHelper.csproj
@@ -16,5 +16,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controls\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
