Refactor CustomTabBar content moved to ProductsPage

--- a/CookHelper/CookHelper.csproj
+++ b/CookHelper/CookHelper.csproj
@@ -21,4 +21,10 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Views\CustomTabBar.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Views\CustomTabBar.xaml.cs" />
+  </ItemGroup>
 </Project>
