--- a/CookHelper.iOS/CookHelper.iOS.csproj
+++ b/CookHelper.iOS/CookHelper.iOS.csproj
@@ -139,10 +139,10 @@
     <Folder Include="CustomRenderers\" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\icons8-plus_math.png" />
-    <BundleResource Include="Resources\icons8-search.png" />
     <BundleResource Include="Resources\tab_products.png" />
     <BundleResource Include="Resources\tab_recipes.png" />
     <BundleResource Include="Resources\tab_settings.png" />
+    <BundleResource Include="Resources\nav_add.png" />
+    <BundleResource Include="Resources\nav_search.png" />
   </ItemGroup>
 </Project>
