Update elements in SettingsPage
changed 4th icon, added tap-gestures, changed elements bg color to white, added switch to 4th element

--- a/CookHelper.iOS/CookHelper.iOS.csproj
+++ b/CookHelper.iOS/CookHelper.iOS.csproj
@@ -151,5 +151,6 @@
     <BundleResource Include="Resources\set_amount.png" />
     <BundleResource Include="Resources\set_volume.png" />
     <BundleResource Include="Resources\set_weight.png" />
+    <BundleResource Include="Resources\set_update.png" />
   </ItemGroup>
 </Project>
