add all variables to Product model, sample products, and displaying it in ProductPage

--- a/CookHelper/CookHelper.csproj
+++ b/CookHelper/CookHelper.csproj
@@ -26,5 +26,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Views\CustomTabBar.xaml.cs" />
+    <Compile Remove="ViewModels\BaseViewModel.cs" />
   </ItemGroup>
 </Project>
